# rustlings

./: Cargo.toml
exercises/: quiz1.rs  quiz2.rs  quiz3.rs
exercises/clippy/: clippy1.rs  clippy2.rs  clippy3.rs
exercises/enums/: enums2.rs  enums3.rs
exercises/error_handling/: errors2.rs  errors3.rs  errors4.rs  errors5.rs  errors6.rs
exercises/functions/: functions1.rs  functions2.rs
exercises/hashmaps/: hashmaps1.rs  hashmaps2.rs  hashmaps3.rs
exercises/if/: if1.rs  if2.rs
exercises/intro/: intro2.rs
exercises/options/: options1.rs
exercises/primitive_types/: primitive_types3.rs  primitive_types4.rs  primitive_types5.rs
exercises/standard_library_types/: arc1.rs  box1.rs  iterators1.rs  iterators2.rs  iterators3.rs  iterators4.rs  iterators5.rs  rc1.rs
exercises/strings/: strings2.rs  strings3.rs
exercises/structs/: structs1.rs  structs2.rs
exercises/tests/: tests1.rs  tests2.rs
exercises/threads/: threads1.rs  threads2.rs  threads3.rs
exercises/traits/: traits1.rs  traits2.rs  traits3.rs
exercises/variables/: variables2.rs  variables3.rs
exercises/vecs/: vecs1.rs  vecs2.rs
